# nonsense

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  main.yml
control/: CMakeLists.txt  main.cpp
daemon/: CMakeLists.txt  async.h  bus_slot.h  cli.cpp  cli.h  common_definitions.h  config.cpp  config.h  configuration.cpp  configuration.h  controller.cpp  controller.h  dbus.h  entity.cpp  entity.h  function.h  log_helpers.h  main.cpp  overloads.h  paths.h.in  service.cpp  service.h  transaction.cpp  transaction.h  transactions.cpp  transactions.h
dbus/: CMakeLists.txt  info.griwes.nonsense.conf
dbus/system-services/: info.griwes.nonsense.service
doc/: licence-cpp-formatted
entityd/: CMakeLists.txt  cleanup.h  main.cpp
etc/: CMakeLists.txt
etc/nft/: default.nft
etc/nonsense/: nonsense.json
systemd/: CMakeLists.txt  nonsense-client@.target  nonsense-connection-setup  nonsense-connection-teardown  nonsense-connection@.service  nonsense-entity@.service  nonsense-interface@.service  nonsense-namespace@.target  nonsense-netns@.service  nonsense-netns@default.service  nonsense-network-connection@.service  nonsense-network-route@.service  nonsense-network@.service  nonsense-network@.target  nonsense-router@.service.in  nonsense-router@.target  nonsense-uplink@.service  nonsense.slice  nonsensed.service.in
systemd/nonsense-.slice.d/: 10-defaults.conf
test/: Vagrantfile
test/docker/: debian-clang.Dockerfile  debian-gcc.Dockerfile  debian-gcc10.Dockerfile  fedora-clang.Dockerfile  fedora-gcc.Dockerfile  ubuntu-clang.Dockerfile  ubuntu-gcc.Dockerfile  ubuntu-gcc10.Dockerfile  ubuntu-legacy-clang.Dockerfile
test/scripts/: prepare_environment  run_test_suite
test/suite/0.sanity/: 0.basic.test  1.nonsensed.test
test/suite/1.namespace/: 0.default.test  1.create.test  2.uplink.test
test/suite/2.component/1.network/4.switch/: 1.uplink-external.test  2.uplink-default.test  3.uplink.test  4.uplink-client.test  5.uplink-network.test  6.uplink-network-network.test  uplink.template
test/suite/2.network/: 0.bridge.test  1.uplink-external.test  2.uplink-default.test  3.uplink.test  4.uplink-client.test  5.uplink-network.test  6.uplink-network-network.test  uplink.template
unit-tests/: CMakeLists.txt  entity-queue.cpp  template.test
